--- a/test-app/build.gradle
+++ b/test-app/build.gradle
@@ -50,9 +50,13 @@ android {
         jvmTarget = "1.8"
         freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.1.0-alpha06"
+    }
     buildFeatures {
-        dataBinding true
         viewBinding true
+        dataBinding true
+        compose true
     }
     buildTypes {
         release {
@@ -85,15 +89,19 @@ dependencies {
     implementation project(':readium:lcp')
 
     implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.activity:activity-ktx:1.3.1"
     implementation "androidx.appcompat:appcompat:1.3.1"
     implementation "androidx.browser:browser:1.3.0"
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.0"
+    implementation 'androidx.compose.material:material:1.1.0-alpha06'
+    implementation 'androidx.compose.ui:ui-tooling:1.1.0-alpha06'
+    implementation "androidx.constraintlayout:constraintlayout:2.1.1"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-rc01'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-rc01"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation "androidx.paging:paging-runtime-ktx:3.0.1"
@@ -114,7 +122,7 @@ dependencies {
     //noinspection GradleDependency
     implementation "com.squareup.picasso:picasso:2.5.2"
     implementation "joda-time:joda-time:2.10.10"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     // AM NOTE: needs to stay this version for now (June 24,2020)
     //noinspection GradleDependency
     implementation 'org.jsoup:jsoup:1.13.1'
