--- a/test-app/build.gradle
+++ b/test-app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     implementation "androidx.browser:browser:1.3.0"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.compose.material:material:1.1.0-alpha06'
+    implementation 'androidx.compose.material:material-icons-extended:1.1.0-alpha06'
     implementation 'androidx.compose.ui:ui-tooling:1.1.0-alpha06'
     implementation "androidx.constraintlayout:constraintlayout:2.1.1"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
