--- a/readium/lcp/build.gradle
+++ b/readium/lcp/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     implementation "org.zeroturnaround:zt-zip:1.14"
     implementation 'androidx.browser:browser:1.3.0'
 
-    final room_version = '2.4.0-alpha04'
+    final room_version = '2.4.0-beta01'
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
