--- a/test-app/build.gradle
+++ b/test-app/build.gradle
@@ -119,7 +119,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.13.1'
 
     // Room database
-    final room_version = '2.3.0'
+    final room_version = '2.4.0-beta01'
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
