--- a/test-app/src/main/AndroidManifest.xml
+++ b/test-app/src/main/AndroidManifest.xml
@@ -190,6 +190,9 @@
             android:name=".reader.ReaderActivity"
             android:label="Reader" />
         <activity
+            android:name=".reader2.VisualReaderActivity"
+            android:label="Reader" />
+        <activity
             android:name=".reader.VisualReaderActivity"
             android:label="Reader" />
 
