Enable source and doc publishing

--- a/readium/lcp/build.gradle
+++ b/readium/lcp/build.gradle
@@ -45,6 +45,9 @@ afterEvaluate {
 
                 groupId = 'com.github.readium'
                 artifactId = 'readium-lcp'
+
+                artifact sourcesJar
+                artifact javadocsJar
             }
         }
     }
