--- a/readium/navigator/build.gradle
+++ b/readium/navigator/build.gradle
@@ -49,6 +49,9 @@ afterEvaluate {
 
                 groupId = 'com.github.readium'
                 artifactId = 'readium-navigator'
+
+                artifact sourcesJar
+                artifact javadocsJar
             }
         }
     }
