--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,15 @@ subprojects { project ->
             }
         }
     }
+
+    task javadocsJar(type: Jar) {
+        archiveClassifier.set("javadoc")
+    }
+
+    task sourcesJar(type: Jar) {
+        archiveClassifier.set("sources")
+        from "src/main/java", "src/main/resources"
+    }
 }
 
 task clean(type: Delete) {
