--- a/readium/opds/build.gradle
+++ b/readium/opds/build.gradle
@@ -40,6 +40,9 @@ afterEvaluate {
                 from components.release
                 groupId = 'com.github.readium'
                 artifactId = 'readium-opds'
+
+                artifact sourcesJar
+                artifact javadocsJar
             }
         }
     }
