--- a/readium/shared/build.gradle
+++ b/readium/shared/build.gradle
@@ -45,6 +45,9 @@ afterEvaluate {
 
                 groupId = 'com.github.readium'
                 artifactId = 'readium-shared'
+
+                artifact sourcesJar
+                artifact javadocsJar
             }
         }
     }
