--- a/readium/shared/build.gradle
+++ b/readium/shared/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.browser:browser:1.3.0'
     implementation "com.github.kittinunf.fuel:fuel-android:2.2.2"
     implementation "com.github.kittinunf.fuel:fuel:2.2.2"
     implementation "com.jakewharton.timber:timber:4.7.1"
