--- a/readium/adapters/nanohttpd/build.gradle
+++ b/readium/adapters/nanohttpd/build.gradle
@@ -72,5 +72,9 @@ dependencies {
         exclude group: 'org.parboiled'
     }
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
+    testImplementation 'androidx.test:core-ktx:1.4.0'
+    testImplementation "junit:junit:4.13.2"
 }
 
