--- a/readium/lcp/build.gradle
+++ b/readium/lcp/build.gradle
@@ -59,10 +59,10 @@ dependencies {
 
     api project(':readium:shared')
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation "com.jakewharton.timber:timber:4.7.1"
+    implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation("com.mcxiaoke.koi:async:0.5.5") {
         exclude module: 'support-v4'
     }
@@ -71,9 +71,9 @@ dependencies {
     }
     implementation 'joda-time:joda-time:2.10.13'
     implementation "org.zeroturnaround:zt-zip:1.14"
-    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'androidx.browser:browser:1.4.0'
 
-    final room_version = '2.4.0-beta01'
+    final room_version = '2.4.0-rc01'
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
