--- a/readium/streamer/build.gradle
+++ b/readium/streamer/build.gradle
@@ -58,13 +58,9 @@ dependencies {
 
     api project(':readium:shared')
 
-    final JACKSON_VERSION = '2.12.4'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation "com.fasterxml.jackson.core:jackson-annotations:$JACKSON_VERSION"
-    implementation "com.fasterxml.jackson.core:jackson-core:$JACKSON_VERSION"
-    implementation "com.fasterxml.jackson.core:jackson-databind:$JACKSON_VERSION"
-    implementation "com.github.barteksc:pdfium-android:1.7.1"
-    implementation "com.jakewharton.timber:timber:4.7.1"
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'com.github.barteksc:pdfium-android:1.9.0'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
     //noinspection GradleDependency
     implementation ("com.github.edrlab.nanohttpd:nanohttpd:master-SNAPSHOT") {
         exclude group: 'org.parboiled'
@@ -88,15 +84,13 @@ dependencies {
     testImplementation 'androidx.test:core-ktx:1.4.0'
     testImplementation "junit:junit:4.13.2"
     testImplementation "net.sf.kxml:kxml2:2.3.0"
-    testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
+    testImplementation 'org.assertj:assertj-core:3.21.0'
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.6.0"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
-    // Latest version of org.json is incompatible with the one bundled in Android, breaking the tests.
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
     //noinspection GradleDependency
-    testImplementation "org.json:json:20200518"
-    testImplementation "org.mockito:mockito-core:3.3.3"
-    testImplementation 'org.robolectric:robolectric:4.5.1'
+    testImplementation 'org.mockito:mockito-core:4.1.0'
+    testImplementation 'org.robolectric:robolectric:4.7.3'
     testImplementation "xmlpull:xmlpull:1.1.3.1"
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
