--- a/readium/navigator/build.gradle
+++ b/readium/navigator/build.gradle
@@ -99,9 +99,8 @@ dependencies {
     //noinspection GradleDependency
     implementation 'org.jsoup:jsoup:1.14.3'
 
+    // Tests
     testImplementation "junit:junit:4.13.2"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
 }
