--- a/readium/opds/build.gradle
+++ b/readium/opds/build.gradle
@@ -59,18 +59,9 @@ dependencies {
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
 
-    testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
-    testImplementation 'androidx.test:core-ktx:1.4.0'
-    testImplementation "junit:junit:4.13.2"
-    testImplementation "net.sf.kxml:kxml2:2.3.0"
-    testImplementation 'org.assertj:assertj-core:3.21.0'
-    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.6.0"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
-    testImplementation 'org.mockito:mockito-core:4.1.0'
+    // Tests
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.7.3'
-    testImplementation "xmlpull:xmlpull:1.1.3.1"
-
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
 }
