--- a/readium/lcp/build.gradle
+++ b/readium/lcp/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     implementation "org.zeroturnaround:zt-zip:1.14"
     implementation 'androidx.browser:browser:1.4.0'
 
-    final room_version = '2.4.0-rc01'
+    final room_version = '2.4.0'
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
