--- a/readium/shared/build.gradle
+++ b/readium/shared/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation "nl.komponents.kovenant:kovenant-functional:3.3.0"
     implementation "nl.komponents.kovenant:kovenant-jvm:3.3.0"
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.0"
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.6.10'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     implementation "org.jsoup:jsoup:1.14.3"
 
