--- a/readium/opds/build.gradle
+++ b/readium/opds/build.gradle
@@ -53,25 +53,15 @@ dependencies {
 
     api project(':readium:shared')
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation "com.jakewharton.timber:timber:4.7.1"
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation "joda-time:joda-time:2.10.13"
     implementation "nl.komponents.kovenant:kovenant:3.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
 
-    testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
-    testImplementation 'androidx.test:core-ktx:1.4.0'
-    testImplementation "junit:junit:4.13.2"
-    testImplementation "net.sf.kxml:kxml2:2.3.0"
-    testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
-    testImplementation "org.json:json:20200518"
-    testImplementation "org.mockito:mockito-core:3.3.3"
-    testImplementation 'org.robolectric:robolectric:4.5.1'
-    testImplementation "xmlpull:xmlpull:1.1.3.1"
-
+    // Tests
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.robolectric:robolectric:4.7.3'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
 }
