--- a/readium/streamer/build.gradle
+++ b/readium/streamer/build.gradle
@@ -59,7 +59,9 @@ dependencies {
     api project(':readium:shared')
 
     implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.github.barteksc:pdfium-android:1.9.0'
+    // PdfiumAndroid 1.9.0 conflicts with liblcp, see https://github.com/readium/kotlin-toolkit/issues/29
+    //noinspection GradleDependency
+    implementation "com.github.barteksc:pdfium-android:1.8.2"
     implementation 'com.jakewharton.timber:timber:5.0.1'
     //noinspection GradleDependency
     implementation ("com.github.edrlab.nanohttpd:nanohttpd:master-SNAPSHOT") {
