--- a/test-app/src/main/AndroidManifest.xml
+++ b/test-app/src/main/AndroidManifest.xml
@@ -190,19 +190,8 @@
             android:name=".reader.ReaderActivity"
             android:label="Reader" />
         <activity
-            android:name=".reader.VisualReaderActivity"
+            android:name=".reader.FullscreenReaderActivity"
             android:label="Reader" />
-
-        <!--*<service android:name=".reader.AudiobookService"
-            android:enabled="true"
-            android:exported="true"
-            android:stopWithTask="true"
-            tools:ignore="ExportedService">
-
-            <intent-filter>
-                <action android:name="android.media.browse.MediaBrowserService" />
-            </intent-filter>
-        </service>-->
 
         <service android:name=".MediaService"
             android:enabled="true"
