--- a/test-app/src/main/AndroidManifest.xml
+++ b/test-app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
     <!-- android:networkSecurityConfig is required for r2-lcp-kotlin and r2-navigator-kotlin -->
     <application
-        android:name=".R2App"
+        android:name=".Application"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -190,7 +190,7 @@
             android:name=".reader.ReaderActivity"
             android:label="Reader" />
         <activity
-            android:name=".reader.FullscreenReaderActivity"
+            android:name=".reader.FullscreenReaderActivityDelegate"
             android:label="Reader" />
 
         <service android:name=".MediaService"
