--- a/readium/navigator/build.gradle
+++ b/readium/navigator/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     api "com.google.android.exoplayer:extension-mediasession:2.15.0"
     api "com.google.android.exoplayer:extension-workmanager:2.15.0"
     implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-util:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
