--- a/readium/navigator/build.gradle
+++ b/readium/navigator/build.gradle
@@ -96,6 +96,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "dev.chrisbanes.snapper:snapper:0.1.2"
     implementation 'com.google.android.material:material:1.4.0'
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "com.shopgun.android:utils:1.0.9"
