--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,8 @@ nav:
   - Migration Guide: migration-guide.md
   - User Guides:
     - PDF Support: guides/pdf.md
+    - Text-to-speech: guides/tts.md
+    - Extracting the content of a publication: guides/content.md
   - API Reference:
       - Shared: readium/shared/index.md
       - Streamer: readium/streamer/index.md
