--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,8 @@ markdown_extensions:
 nav:
   - Migration Guide: migration-guide.md
   - User Guides:
-    - PDF Support: guides/pdf.md
+    - Navigator settings: guides/navigator-settings.md
+    - PDF support: guides/pdf.md
     - Text-to-speech: guides/tts.md
     - Extracting the content of a publication: guides/content.md
   - API Reference:
