--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,3 @@
-# Eventually want to use this for dependencies, but Android Studio is not ready
-
 [versions]
 kotlin = "1.6.10"
 dokka = "1.5.30"
@@ -28,6 +26,7 @@ robolectric = "4.7.3"
 kotlin-junit = "1.6.10"
 assertj = "3.21.0"
 coroutines-test = "1.5.2"
+kovenant = "3.3.0"
 
 [libraries]
 kotlin-gradle = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -68,6 +67,7 @@ robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "
 kotlin-junit = { group = "org.jetbrains.kotlin", name = "kotlin-test-junit", version.ref = "kotlin-junit" }
 assertj = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
 coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutines-test" }
+kovenant = { group = "nl.komponents.kovenant", name = "kovenant", version.ref = "kovenant" }
 
 [bundles]
 room = ["room-runtime", "room-compiler"]
